# SystemMonitor

./: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  dox.conf
Documentation/SDS/: SDS.md
Documentation/SRS/: SRS.md
Documentation/Tests/: Tests.md
Documentation/html/: Interface_8h_source.html  Process_8h_source.html  System__monitor_8h_source.html  Thread_8h_source.html  annotated.html  classInterface-members.html  classInterface.html  classProcess-members.html  classProcess.html  classSystem__monitor-members.html  classSystem__monitor.html  classThread-members.html  classThread.html  classes.html  dir_7ef98ecddbc14bfaf3780bcee60c068e.html  files.html  functions.html  functions_func.html  index.html  system_8h_source.html  utility_8h_source.html
Documentation/html/search/: all_0.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_2.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
SystemMonitor/: CMakeLists.txt  Interface.cpp  Interface.h  Output_manager.h  Process.cpp  Process.h  System_monitor.cpp  System_monitor.h  Thread.cpp  Thread.h  main.cpp  system.cpp  system.h  test.cpp  ui.slint  utility.cpp  utility.h
